# lrn_ccds

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
lrn_ccds/: __init__.py  dataset.py  features.py  plots.py
lrn_ccds/modeling/: predict.py  train.py
notebooks/: super-simple.ipynb
notebooks/script/: super-simple.py
