[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lrn_ccds"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Bartev" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "awscli>=1.36.9",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipython>=8.29.0",
    "isort>=5.13.2",
    "jupyterlab>=4.3.1",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "mkdocs>=1.6.1",
    "nbautoexport>=0.5.2",
    "notebook>=7.0.7",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pydantic>=2.10.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.0",
    "typer>=0.13.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lrn_ccds"]
force_sort_within_sections = true

[tool.uv.sources]
lrn-ccds = { workspace = true }

[dependency-groups]
dev = [
    "lrn-ccds",
]
